--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
+
 #logo-text {
-    font-family: tw cen mt;
+    font-family: Afacad Flux, tw cen mt;
+    font-optical-sizing: auto;
     font-size: 35px;
 }
 
@@ -40,7 +43,7 @@
 #abt-head {
     border-radius: 5px;
     background-color: rgb(40, 40, 40);
-    font-family: tw cen mt;
+    font-family: Afacad Flux, tw cen mt;
 }
 
 #skill-list {
@@ -63,7 +66,7 @@
 
 #certs-cont {
     text-align: center;
-    font-family: tw cen mt;
+    font-family: Afacad Flux, tw cen mt;
     display: contents;
 }
 
@@ -71,6 +74,7 @@
     background-color: #dc3545;
     padding: 2%;
     width: 70%;
+    min-width: 350px;
     border-radius: 10px;
 }
 
@@ -85,7 +89,7 @@
 }
 
 #projects {
-    font-family: tw cen mt;
+    font-family: Afacad Flux, tw cen mt;
     text-align: center;
 }
 
